# AppServer

./: .coverage  .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: backend-ci.yml  frontend-ci.yml  python-app.yml
backend/: api.py  backend.py  docker-compose.yml  pyproject.toml  requirements.txt  service.py  setup.py  test  test.py  test_api.py  test_service.py  testp.py
backend/src/modules/: apis.py
backend/src/modules/templates/: home.html
backend/src/tests/: test_data_servoce.py  test_parsers.py
frontend/: .eslintrc.json  Dockerfile  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json
frontend/public/: index.html  manifest.json  swagger.yml
frontend/src/: App.js  styles.css
frontend/src/components/: ApiProxy.js  DeviceSelector.js  Graph.js  Stats.js
frontend/src/context/: DataContext.js
frontend/src/pages/: Dashboard-db.js  Dashboard.js  NotFound.js
frontend/src/services/: api.js  database.js  proxy.js
frontend/src/tests/: ApiProxy.test.js  DeviceSelector.test.js  proxy.test.js
src/: .coverage  .flake8  requirements.txt
src/app_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/modules/: apis.py  data_service.py  parsers.py  swagger.yml
src/tests/: old_test_apis.py  test_apis.py  test_data_servoce.py  test_parsers.py
test_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
